Prevent layout shifts.

--- a/assets/sass/components/settings/_googlesitekit-settings-module.scss
+++ b/assets/sass/components/settings/_googlesitekit-settings-module.scss
@@ -124,10 +124,18 @@
 				padding: 8px 0;
 			}
 
+			.googlesitekit-settings-module__status--not-connected {
+
+				.mdc-button {
+					margin: -1.5px 0;
+				}
+			}
+
 			.googlesitekit-settings-module__status--loading {
 				align-items: center;
 				display: flex;
 				min-width: 150px;
+				padding: 0.5px 0;
 			}
 		}
 
